# bazel-matrix

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md
bazel_runner/: BUILD.bazel  bazel_runner.py  bazel_runner_test.py  defs.bzl  hermetic_llvm.MODULE.bazel  rbe_test_status.md
builds/: BUILD.bazel  clients.bzl  defs.bzl  environments.bzl  overlays.bzl
builds/abseil_cpp/: BUILD.bazel
builds/abseil_py/: BUILD.bazel
builds/bazel/: BUILD.bazel
builds/benchmark/: BUILD.bazel
builds/boringssl/: BUILD.bazel
builds/brotli/: BUILD.bazel
builds/brotli_go/: BUILD.bazel
builds/buildtools/: BUILD.bazel
builds/catch2/: BUILD.bazel
builds/cctz/: BUILD.bazel
builds/cjson/: BUILD.bazel
builds/cli11/: BUILD.bazel
builds/copybara/: BUILD.bazel
builds/cpptrace/: BUILD.bazel
builds/cpu_features/: BUILD.bazel
builds/crow/: BUILD.bazel
builds/cxx/: BUILD.bazel
builds/doctest/: BUILD.bazel
builds/double_conversion/: BUILD.bazel
builds/fast_float/: BUILD.bazel
builds/flatbuffers/: BUILD.bazel
builds/ftxui/: BUILD.bazel
builds/fuzztest/: BUILD.bazel
builds/gflags/: BUILD.bazel
builds/glm/: BUILD.bazel
builds/glog/: BUILD.bazel
builds/go_jsonnet/: BUILD.bazel
builds/googletest/: BUILD.bazel
builds/gperftools/: BUILD.bazel
builds/grpc/: BUILD.bazel
builds/grpc_gateway/: BUILD.bazel
builds/highs/: BUILD.bazel
builds/highway/: BUILD.bazel
builds/iceoryx2/: BUILD.bazel
builds/json/: BUILD.bazel
builds/jsoncpp/: BUILD.bazel
builds/jsonnet/: BUILD.bazel
builds/lcm/: BUILD.bazel
builds/lexy/: BUILD.bazel
builds/magic_enum/: BUILD.bazel
builds/nsync/: BUILD.bazel
builds/onetbb/: BUILD.bazel
builds/opencc/: BUILD.bazel
builds/openexr/: BUILD.bazel
builds/opentelemetry_cpp/: BUILD.bazel
builds/ortools/: BUILD.bazel
builds/pcre2/: BUILD.bazel
builds/prometheus_cpp/: BUILD.bazel
builds/protobuf/: BUILD.bazel
builds/quill/: BUILD.bazel
builds/re2/: BUILD.bazel
builds/simdutf/: BUILD.bazel
builds/snappy/: BUILD.bazel
builds/tinyxml2/: BUILD.bazel
builds/tomlplusplus/: BUILD.bazel
builds/verible/: BUILD.bazel
builds/z3/: BUILD.bazel
builds/zlib/: BUILD.bazel
data/: matrix_projects.jsonl  project_tags.json  projects.json  projects.jsonl
docs/: DESIGN.md  hermetic-minimal.md  roadmap.md  usage.md
kiss/: BUILD.bazel  defs.bzl  extension.bzl  kiss_runner.py  rbe_build_status.md
pipeline/: BUILD.bazel  __init__.py  _ranked_doc.py  add_project.py  classify.py  gather.py  github.py  inventory.py  matrix.py  model.py  netfetch.py  next_candidates.py  pipeline_test.py  rank.py  render_readme.py  tags.py  update_matrix.py  update_matrix_test.py
pipeline/sources/: __init__.py  bcr.py  jin.py  nicolov.py
projects/: BUILD.bazel  defs.bzl  run.sh
projects/abseil_cpp/: BUILD.bazel  project.bzl
projects/abseil_py/: BUILD.bazel  project.bzl
projects/aravis/: BUILD.bazel  foreign_cc.MODULE.bazel  project.bzl
projects/aravis/hermetic_llvm/: BUILD.bazel
projects/argparse/: README.md  candidate.json  project.bzl
projects/avro-cpp/: BUILD.bazel  project.bzl
projects/avro-cpp/hermetic_llvm/: BUILD.bazel
projects/basis_universal/: BUILD.bazel  project.bzl
projects/bazel/: BUILD.bazel  project.bzl
projects/behaviortree_cpp/: BUILD.bazel  project.bzl
projects/benchmark/: BUILD.bazel  project.bzl
projects/boringssl/: BUILD.bazel  project.bzl
projects/briansmith_ring/: BUILD.bazel  project.bzl
projects/brotli/: BUILD.bazel  project.bzl
projects/brotli_go/: BUILD.bazel  parent.MODULE.bazel  project.bzl
projects/buildtools/: BUILD.bazel  project.bzl
projects/c-blosc2/: BUILD.bazel  project.bzl
projects/catch2/: BUILD.bazel  project.bzl
projects/ccronexpr/: BUILD.bazel  project.bzl
projects/cctz/: BUILD.bazel  project.bzl
projects/cel-spec/: README.md  candidate.json  project.bzl
projects/ceres-solver/: README.md  candidate.json  project.bzl
projects/cityhash/: BUILD.bazel  project.bzl
projects/cjson/: BUILD.bazel  project.bzl
projects/cli11/: BUILD.bazel  project.bzl
projects/colossus/: README.md  candidate.json  project.bzl
projects/container-structure-test/: README.md  candidate.json  project.bzl
projects/container-structure-test/hermetic_llvm/: BUILD.bazel
projects/copybara/: BUILD.bazel  project.bzl
projects/copybara/hermetic_llvm/: BUILD.bazel
projects/cpp-httplib/: BUILD.bazel  project.bzl
projects/cppitertools/: README.md  candidate.json  project.bzl
projects/cpptrace/: BUILD.bazel  project.bzl
projects/cpu_features/: BUILD.bazel  project.bzl
projects/cpuinfo/: README.md  candidate.json  project.bzl
projects/crow/: BUILD.bazel  project.bzl
projects/crow/hermetic_llvm/: BUILD.bazel
projects/cucumber-cpp/: BUILD.bazel  project.bzl
projects/curl/: BUILD.bazel  project.bzl
projects/cxx/: BUILD.bazel  project.bzl
projects/cxxopts/: README.md  candidate.json  project.bzl
projects/cxxurl/: BUILD.bazel  project.bzl
projects/cython/: README.md  candidate.json  project.bzl
projects/googletest/hermetic_llvm/: BUILD.bazel
projects/gperftools/hermetic_llvm/: BUILD.bazel
projects/highway/hermetic_llvm/: BUILD.bazel
projects/iperf/hermetic_llvm/: BUILD.bazel
projects/lcm/hermetic_llvm/: BUILD.bazel
projects/opencc/hermetic_llvm/: BUILD.bazel
projects/re2/: BUILD.bazel  project.bzl
projects/re2/hermetic_llvm/: BUILD.bazel
runner/: README.md  _readme_table.py  image-minimg-test.tsv  image-minimg.tsv  local-results.tsv
tools/: buildbuddy_credential_helper.py  run-one-project-loop.sh  test
tools/actiond_host/: .bazelrc  BUILD.bazel  MODULE.bazel  bazel-actiond_host  bazel-bin  bazel-out  bazel-testlogs  bazel_downloader.cfg  credential_helper.sh
tools/actiond_host/patches/: llvm_musl_root_package_copy.patch  zstd_no_pthread.patch
tools/rbe_image/: BUILD.bazel  extract_deb.py
wild/: BUILD.bazel  CATALOG.md  Dockerfile.baseline  README.md  _catalog.py  _projects.py  _readme_table.py  _sweep_projects.py  build.sh  defs.bzl  gen_targets.py  run.sh  sweep-results.tsv  sweep.sh  verify.sh
(+471 files in other folders)
