# Root sweep targets.
#
# Root sweep names use project / variant / environment / command. Non-`all_*`
# targets exclude heavyweight projects by default; `all_*` includes both regular
# and heavyweight projects for the same variant/environment/command.
LARGE_PROJECTS = [
    "bazel",
    "llvm-project",
    "rocksdb",
]

BUILD_PACKAGES = [
    "abseil_cpp/as_is",
    "abseil_cpp/hermetic_llvm",
    "abseil_py/as_is",
    "abseil_py/hermetic_llvm",
    "aravis/as_is",
    "aravis/hermetic_llvm",
    "avro-cpp/as_is",
    "avro-cpp/hermetic_llvm",
    "basis_universal/as_is",
    "basis_universal/hermetic_llvm",
    "bazel/as_is",
    "behaviortree_cpp/as_is",
    "behaviortree_cpp/hermetic_llvm",
    "benchmark/as_is",
    "benchmark/hermetic_llvm",
    "boringssl/as_is",
    "boringssl/hermetic_llvm",
    "briansmith_ring/as_is",
    "brotli/as_is",
    "brotli_go/as_is",
    "buildtools/as_is",
    "c-blosc2/as_is",
    "c-blosc2/hermetic_llvm",
    "catch2/as_is",
    "catch2/hermetic_llvm",
    "ccronexpr/as_is",
    "ccronexpr/hermetic_llvm",
    "cctz/as_is",
    "cctz/hermetic_llvm",
    "cityhash/as_is",
    "cityhash/hermetic_llvm",
    "cjson/as_is",
    "cjson/hermetic_llvm",
    "cli11/as_is",
    "cli11/hermetic_llvm",
    "copybara/as_is",
    "cpp-httplib/as_is",
    "cpp-httplib/hermetic_llvm",
    "cpptrace/as_is",
    "cpu_features/as_is",
    "cpu_features/hermetic_llvm",
    "crow/as_is",
    "crow/hermetic_llvm",
    "cucumber-cpp/as_is",
    "cucumber-cpp/hermetic_llvm",
    "curl/as_is",
    "cxx/as_is",
    "cxxurl/as_is",
    "cxxurl/hermetic_llvm",
    "directxmath/as_is",
    "directxmath/hermetic_llvm",
    "doctest/as_is",
    "double_conversion/as_is",
    "double_conversion/hermetic_llvm",
    "effcee/as_is",
    "effcee/hermetic_llvm",
    "exprtk/as_is",
    "exprtk/hermetic_llvm",
    "fast_float/as_is",
    "fast_float/hermetic_llvm",
    "fftw/as_is",
    "flatbuffers/as_is",
    "flatbuffers/hermetic_llvm",
    "flex/as_is",
    "flex/hermetic_llvm",
    "ftxui/as_is",
    "ftxui/hermetic_llvm",
    "fuzztest/as_is",
    "fuzztest/hermetic_llvm",
    "fzf/as_is",
    "gflags/as_is",
    "glm/as_is",
    "glm/hermetic_llvm",
    "glog/as_is",
    "glog/hermetic_llvm",
    "go_jsonnet/as_is",
    "googletest/as_is",
    "googletest/hermetic_llvm",
    "gperftools/as_is",
    "gperftools/hermetic_llvm",
    "grpc/as_is",
    "grpc_gateway/as_is",
    "gsl-lite/as_is",
    "gsl-lite/hermetic_llvm",
    "hfsm2/as_is",
    "hfsm2/hermetic_llvm",
    "highs/as_is",
    "highs/hermetic_llvm",
    "highway/as_is",
    "highway/hermetic_llvm",
    "iceoryx2/as_is",
    "icu/as_is",
    "icu/hermetic_llvm",
    "iperf/as_is",
    "iperf/hermetic_llvm",
    "iverilog/as_is",
    "iverilog/hermetic_llvm",
    "json/as_is",
    "jsoncpp/as_is",
    "jsoncpp/hermetic_llvm",
    "jsonnet/as_is",
    "jsonnet/hermetic_llvm",
    "lcm/as_is",
    "lcm/hermetic_llvm",
    "lexbor/as_is",
    "lexbor/hermetic_llvm",
    "lexy/as_is",
    "lexy/hermetic_llvm",
    "libavif/as_is",
    "libavif/hermetic_llvm",
    "libcreate/as_is",
    "libcreate/hermetic_llvm",
    "libde265/as_is",
    "libde265/hermetic_llvm",
    "libdwarf/as_is",
    "libdwarf/hermetic_llvm",
    "libevent/as_is",
    "libevent/hermetic_llvm",
    "libfastjson/as_is",
    "libfastjson/hermetic_llvm",
    "libgd/as_is",
    "libgd/hermetic_llvm",
    "libgit2/as_is",
    "libgit2/hermetic_llvm",
    "libheif/as_is",
    "libheif/hermetic_llvm",
    "libpcap/as_is",
    "libpcap/hermetic_llvm",
    "libwebsockets/as_is",
    "libwebsockets/hermetic_llvm",
    "llvm-project/as_is",
    "magic_enum/as_is",
    "magic_enum/hermetic_llvm",
    "marisa-trie/as_is",
    "marisa-trie/hermetic_llvm",
    "nsync/as_is",
    "nsync/hermetic_llvm",
    "ogg/as_is",
    "ogg/hermetic_llvm",
    "onetbb/as_is",
    "onetbb/hermetic_llvm",
    "opencc/as_is",
    "opencc/hermetic_llvm",
    "opencl-sdk/as_is",
    "opencl-sdk/hermetic_llvm",
    "openexr/as_is",
    "openexr/hermetic_llvm",
    "openssl/as_is",
    "openssl/hermetic_llvm",
    "opentelemetry_cpp/as_is",
    "opentelemetry_cpp/hermetic_llvm",
    "ortools/as_is",
    "pcre2/as_is",
    "pcre2/hermetic_llvm",
    "prometheus_cpp/as_is",
    "prometheus_cpp/hermetic_llvm",
    "protobuf/as_is",
    "protobuf/hermetic_llvm",
    "quill/as_is",
    "quill/hermetic_llvm",
    "re2/as_is",
    "re2/hermetic_llvm",
    "reflexxes-rmltype2/as_is",
    "reflexxes-rmltype2/hermetic_llvm",
    "rocksdb/as_is",
    "rsyslog/as_is",
    "rsyslog/hermetic_llvm",
    "rules_multirun/as_is",
    "s2geometry/as_is",
    "s2geometry/hermetic_llvm",
    "sdl2/as_is",
    "sdl2/hermetic_llvm",
    "sdl2_mixer/as_is",
    "sdl2_mixer/hermetic_llvm",
    "simdutf/as_is",
    "simdutf/hermetic_llvm",
    "snappy/as_is",
    "snappy/hermetic_llvm",
    "squashfs-tools/as_is",
    "squashfs-tools/hermetic_llvm",
    "systemc/as_is",
    "systemc/hermetic_llvm",
    "tinyformat/as_is",
    "tinyformat/hermetic_llvm",
    "tinyxml2/as_is",
    "tinyxml2/hermetic_llvm",
    "tomlplusplus/as_is",
    "tomlplusplus/hermetic_llvm",
    "trlc/as_is",
    "universal-robots-client-library/as_is",
    "universal-robots-client-library/hermetic_llvm",
    "verible/as_is",
    "verible/hermetic_llvm",
    "verilator/as_is",
    "xkbcommon/as_is",
    "xkbcommon/hermetic_llvm",
    "z3/as_is",
    "zlib/as_is",
    "zlib/hermetic_llvm",
    "zstd/as_is",
    "zstd/hermetic_llvm",
    "zziplib/as_is",
    "zziplib/hermetic_llvm",
]

TEST_PACKAGES = [
    "abseil_cpp/as_is",
    "abseil_cpp/hermetic_llvm",
    "abseil_py/as_is",
    "abseil_py/hermetic_llvm",
    "aravis/as_is",
    "aravis/hermetic_llvm",
    "avro-cpp/as_is",
    "avro-cpp/hermetic_llvm",
    "basis_universal/as_is",
    "basis_universal/hermetic_llvm",
    "bazel/as_is",
    "behaviortree_cpp/as_is",
    "behaviortree_cpp/hermetic_llvm",
    "benchmark/as_is",
    "benchmark/hermetic_llvm",
    "boringssl/as_is",
    "boringssl/hermetic_llvm",
    "briansmith_ring/as_is",
    "brotli_go/as_is",
    "buildtools/as_is",
    "c-blosc2/as_is",
    "c-blosc2/hermetic_llvm",
    "catch2/as_is",
    "catch2/hermetic_llvm",
    "ccronexpr/as_is",
    "ccronexpr/hermetic_llvm",
    "cctz/as_is",
    "cctz/hermetic_llvm",
    "cityhash/as_is",
    "cityhash/hermetic_llvm",
    "cjson/as_is",
    "cjson/hermetic_llvm",
    "cli11/as_is",
    "cli11/hermetic_llvm",
    "copybara/as_is",
    "cpp-httplib/as_is",
    "cpp-httplib/hermetic_llvm",
    "cpptrace/as_is",
    "cpu_features/as_is",
    "cpu_features/hermetic_llvm",
    "crow/as_is",
    "crow/hermetic_llvm",
    "cucumber-cpp/as_is",
    "cucumber-cpp/hermetic_llvm",
    "curl/as_is",
    "cxx/as_is",
    "cxxurl/as_is",
    "cxxurl/hermetic_llvm",
    "directxmath/as_is",
    "directxmath/hermetic_llvm",
    "doctest/as_is",
    "double_conversion/as_is",
    "double_conversion/hermetic_llvm",
    "effcee/as_is",
    "effcee/hermetic_llvm",
    "exprtk/as_is",
    "exprtk/hermetic_llvm",
    "fast_float/as_is",
    "fast_float/hermetic_llvm",
    "fftw/as_is",
    "flatbuffers/as_is",
    "flatbuffers/hermetic_llvm",
    "flex/as_is",
    "flex/hermetic_llvm",
    "ftxui/as_is",
    "ftxui/hermetic_llvm",
    "fuzztest/as_is",
    "fuzztest/hermetic_llvm",
    "fzf/as_is",
    "glm/as_is",
    "glm/hermetic_llvm",
    "glog/as_is",
    "glog/hermetic_llvm",
    "go_jsonnet/as_is",
    "googletest/as_is",
    "googletest/hermetic_llvm",
    "gperftools/as_is",
    "gperftools/hermetic_llvm",
    "grpc/as_is",
    "grpc_gateway/as_is",
    "gsl-lite/as_is",
    "gsl-lite/hermetic_llvm",
    "hfsm2/as_is",
    "hfsm2/hermetic_llvm",
    "highs/as_is",
    "highs/hermetic_llvm",
    "highway/as_is",
    "highway/hermetic_llvm",
    "iceoryx2/as_is",
    "icu/as_is",
    "icu/hermetic_llvm",
    "iperf/as_is",
    "iperf/hermetic_llvm",
    "iverilog/as_is",
    "iverilog/hermetic_llvm",
    "jsoncpp/as_is",
    "jsoncpp/hermetic_llvm",
    "jsonnet/as_is",
    "jsonnet/hermetic_llvm",
    "lcm/as_is",
    "lcm/hermetic_llvm",
    "lexbor/as_is",
    "lexbor/hermetic_llvm",
    "lexy/as_is",
    "lexy/hermetic_llvm",
    "libavif/as_is",
    "libavif/hermetic_llvm",
    "libcreate/as_is",
    "libcreate/hermetic_llvm",
    "libde265/as_is",
    "libde265/hermetic_llvm",
    "libdwarf/as_is",
    "libdwarf/hermetic_llvm",
    "libevent/as_is",
    "libevent/hermetic_llvm",
    "libfastjson/as_is",
    "libfastjson/hermetic_llvm",
    "libgd/as_is",
    "libgd/hermetic_llvm",
    "libgit2/as_is",
    "libgit2/hermetic_llvm",
    "libheif/as_is",
    "libheif/hermetic_llvm",
    "libpcap/as_is",
    "libpcap/hermetic_llvm",
    "libwebsockets/as_is",
    "libwebsockets/hermetic_llvm",
    "llvm-project/as_is",
    "magic_enum/as_is",
    "magic_enum/hermetic_llvm",
    "marisa-trie/as_is",
    "marisa-trie/hermetic_llvm",
    "nsync/as_is",
    "nsync/hermetic_llvm",
    "ogg/as_is",
    "ogg/hermetic_llvm",
    "onetbb/as_is",
    "onetbb/hermetic_llvm",
    "opencc/as_is",
    "opencc/hermetic_llvm",
    "opencl-sdk/as_is",
    "opencl-sdk/hermetic_llvm",
    "openexr/as_is",
    "openexr/hermetic_llvm",
    "openssl/as_is",
    "openssl/hermetic_llvm",
    "opentelemetry_cpp/as_is",
    "opentelemetry_cpp/hermetic_llvm",
    "ortools/as_is",
    "pcre2/as_is",
    "pcre2/hermetic_llvm",
    "prometheus_cpp/as_is",
    "prometheus_cpp/hermetic_llvm",
    "protobuf/as_is",
    "protobuf/hermetic_llvm",
    "re2/as_is",
    "re2/hermetic_llvm",
    "reflexxes-rmltype2/as_is",
    "reflexxes-rmltype2/hermetic_llvm",
    "rocksdb/as_is",
    "rsyslog/as_is",
    "rsyslog/hermetic_llvm",
    "rules_multirun/as_is",
    "s2geometry/as_is",
    "s2geometry/hermetic_llvm",
    "sdl2/as_is",
    "sdl2/hermetic_llvm",
    "sdl2_mixer/as_is",
    "sdl2_mixer/hermetic_llvm",
    "simdutf/as_is",
    "simdutf/hermetic_llvm",
    "snappy/as_is",
    "snappy/hermetic_llvm",
    "squashfs-tools/as_is",
    "squashfs-tools/hermetic_llvm",
    "systemc/as_is",
    "systemc/hermetic_llvm",
    "tinyformat/as_is",
    "tinyformat/hermetic_llvm",
    "tinyxml2/as_is",
    "tinyxml2/hermetic_llvm",
    "tomlplusplus/as_is",
    "tomlplusplus/hermetic_llvm",
    "trlc/as_is",
    "universal-robots-client-library/as_is",
    "universal-robots-client-library/hermetic_llvm",
    "verible/as_is",
    "verible/hermetic_llvm",
    "verilator/as_is",
    "xkbcommon/as_is",
    "xkbcommon/hermetic_llvm",
    "zstd/as_is",
    "zstd/hermetic_llvm",
    "zziplib/as_is",
    "zziplib/hermetic_llvm",
]

AS_IS_BUILD_PACKAGES = [package for package in BUILD_PACKAGES if package.endswith("/as_is")]
HERMETIC_LLVM_BUILD_PACKAGES = [package for package in BUILD_PACKAGES if package.endswith("/hermetic_llvm")]
AS_IS_TEST_PACKAGES = [package for package in TEST_PACKAGES if package.endswith("/as_is")]
HERMETIC_LLVM_TEST_PACKAGES = [package for package in TEST_PACKAGES if package.endswith("/hermetic_llvm")]

SMOKE_AS_IS_PACKAGES = [
    "abseil_py/as_is",
    "boringssl/as_is",
    "fast_float/as_is",
    "glm/as_is",
    "tomlplusplus/as_is",
]

SMOKE_HERMETIC_LLVM_PACKAGES = [
    "abseil_py/hermetic_llvm",
    "boringssl/hermetic_llvm",
    "fast_float/hermetic_llvm",
    "glm/hermetic_llvm",
    "tomlplusplus/hermetic_llvm",
]

REGULAR_AS_IS_BUILD_PACKAGES = [package for package in AS_IS_BUILD_PACKAGES if package.split("/")[0] not in LARGE_PROJECTS]
LARGE_AS_IS_BUILD_PACKAGES = [package for package in AS_IS_BUILD_PACKAGES if package.split("/")[0] in LARGE_PROJECTS]
REGULAR_HERMETIC_LLVM_BUILD_PACKAGES = [package for package in HERMETIC_LLVM_BUILD_PACKAGES if package.split("/")[0] not in LARGE_PROJECTS]
LARGE_HERMETIC_LLVM_BUILD_PACKAGES = [package for package in HERMETIC_LLVM_BUILD_PACKAGES if package.split("/")[0] in LARGE_PROJECTS]
REGULAR_AS_IS_TEST_PACKAGES = [package for package in AS_IS_TEST_PACKAGES if package.split("/")[0] not in LARGE_PROJECTS]
LARGE_AS_IS_TEST_PACKAGES = [package for package in AS_IS_TEST_PACKAGES if package.split("/")[0] in LARGE_PROJECTS]
REGULAR_HERMETIC_LLVM_TEST_PACKAGES = [package for package in HERMETIC_LLVM_TEST_PACKAGES if package.split("/")[0] not in LARGE_PROJECTS]
LARGE_HERMETIC_LLVM_TEST_PACKAGES = [package for package in HERMETIC_LLVM_TEST_PACKAGES if package.split("/")[0] in LARGE_PROJECTS]

AS_IS_LOCAL_BUILDS = ["//projects/%s:%s_local_build" % (package, package.split("/")[0]) for package in REGULAR_AS_IS_BUILD_PACKAGES]
LARGE_AS_IS_LOCAL_BUILDS = ["//projects/%s:%s_local_build" % (package, package.split("/")[0]) for package in LARGE_AS_IS_BUILD_PACKAGES]
HERMETIC_LLVM_LOCAL_BUILDS = ["//projects/%s:%s_local_build" % (package, package.split("/")[0]) for package in REGULAR_HERMETIC_LLVM_BUILD_PACKAGES]
LARGE_HERMETIC_LLVM_LOCAL_BUILDS = ["//projects/%s:%s_local_build" % (package, package.split("/")[0]) for package in LARGE_HERMETIC_LLVM_BUILD_PACKAGES]
AS_IS_RBE_BUILDS = ["//projects/%s:%s_rbe_build" % (package, package.split("/")[0]) for package in REGULAR_AS_IS_BUILD_PACKAGES]
LARGE_AS_IS_RBE_BUILDS = ["//projects/%s:%s_rbe_build" % (package, package.split("/")[0]) for package in LARGE_AS_IS_BUILD_PACKAGES]
HERMETIC_LLVM_RBE_BUILDS = ["//projects/%s:%s_rbe_build" % (package, package.split("/")[0]) for package in REGULAR_HERMETIC_LLVM_BUILD_PACKAGES]
LARGE_HERMETIC_LLVM_RBE_BUILDS = ["//projects/%s:%s_rbe_build" % (package, package.split("/")[0]) for package in LARGE_HERMETIC_LLVM_BUILD_PACKAGES]
AS_IS_LOCAL_TESTS = ["//projects/%s:%s_local_test" % (package, package.split("/")[0]) for package in REGULAR_AS_IS_TEST_PACKAGES]
LARGE_AS_IS_LOCAL_TESTS = ["//projects/%s:%s_local_test" % (package, package.split("/")[0]) for package in LARGE_AS_IS_TEST_PACKAGES]
HERMETIC_LLVM_LOCAL_TESTS = ["//projects/%s:%s_local_test" % (package, package.split("/")[0]) for package in REGULAR_HERMETIC_LLVM_TEST_PACKAGES]
LARGE_HERMETIC_LLVM_LOCAL_TESTS = ["//projects/%s:%s_local_test" % (package, package.split("/")[0]) for package in LARGE_HERMETIC_LLVM_TEST_PACKAGES]
AS_IS_RBE_TESTS = ["//projects/%s:%s_rbe_test" % (package, package.split("/")[0]) for package in REGULAR_AS_IS_TEST_PACKAGES]
LARGE_AS_IS_RBE_TESTS = ["//projects/%s:%s_rbe_test" % (package, package.split("/")[0]) for package in LARGE_AS_IS_TEST_PACKAGES]
HERMETIC_LLVM_RBE_TESTS = ["//projects/%s:%s_rbe_test" % (package, package.split("/")[0]) for package in REGULAR_HERMETIC_LLVM_TEST_PACKAGES]
LARGE_HERMETIC_LLVM_RBE_TESTS = ["//projects/%s:%s_rbe_test" % (package, package.split("/")[0]) for package in LARGE_HERMETIC_LLVM_TEST_PACKAGES]
SMOKE_AS_IS_LOCAL_BUILDS = ["//projects/%s:%s_local_build" % (package, package.split("/")[0]) for package in SMOKE_AS_IS_PACKAGES]
SMOKE_AS_IS_LOCAL_TESTS = ["//projects/%s:%s_local_test" % (package, package.split("/")[0]) for package in SMOKE_AS_IS_PACKAGES]
SMOKE_HERMETIC_LLVM_RBE_BUILDS = ["//projects/%s:%s_rbe_build" % (package, package.split("/")[0]) for package in SMOKE_HERMETIC_LLVM_PACKAGES]
SMOKE_HERMETIC_LLVM_RBE_TESTS = ["//projects/%s:%s_rbe_test" % (package, package.split("/")[0]) for package in SMOKE_HERMETIC_LLVM_PACKAGES]

filegroup(
    name = "smoke_as_is_local_builds",
    srcs = SMOKE_AS_IS_LOCAL_BUILDS,
)

filegroup(
    name = "smoke_hermetic_llvm_rbe_builds",
    srcs = SMOKE_HERMETIC_LLVM_RBE_BUILDS,
)

test_suite(
    name = "smoke_as_is_local_tests",
    tests = SMOKE_AS_IS_LOCAL_TESTS,
)

test_suite(
    name = "smoke_hermetic_llvm_rbe_tests",
    tests = SMOKE_HERMETIC_LLVM_RBE_TESTS,
)

filegroup(
    name = "as_is_local_builds",
    srcs = AS_IS_LOCAL_BUILDS,
)

filegroup(
    name = "large_as_is_local_builds",
    srcs = LARGE_AS_IS_LOCAL_BUILDS,
)

filegroup(
    name = "all_as_is_local_builds",
    srcs = [
        ":as_is_local_builds",
        ":large_as_is_local_builds",
    ],
)

filegroup(
    name = "hermetic_llvm_local_builds",
    srcs = HERMETIC_LLVM_LOCAL_BUILDS,
)

filegroup(
    name = "large_hermetic_llvm_local_builds",
    srcs = LARGE_HERMETIC_LLVM_LOCAL_BUILDS,
)

filegroup(
    name = "all_hermetic_llvm_local_builds",
    srcs = [
        ":hermetic_llvm_local_builds",
        ":large_hermetic_llvm_local_builds",
    ],
)

filegroup(
    name = "as_is_rbe_builds",
    srcs = AS_IS_RBE_BUILDS,
)

filegroup(
    name = "large_as_is_rbe_builds",
    srcs = LARGE_AS_IS_RBE_BUILDS,
)

filegroup(
    name = "hermetic_llvm_rbe_builds",
    srcs = HERMETIC_LLVM_RBE_BUILDS,
)

filegroup(
    name = "large_hermetic_llvm_rbe_builds",
    srcs = LARGE_HERMETIC_LLVM_RBE_BUILDS,
)

filegroup(
    name = "all_hermetic_llvm_rbe_builds",
    srcs = [
        ":hermetic_llvm_rbe_builds",
        ":large_hermetic_llvm_rbe_builds",
    ],
)

filegroup(
    name = "all_as_is_rbe_builds",
    srcs = [
        ":as_is_rbe_builds",
        ":large_as_is_rbe_builds",
    ],
)

test_suite(
    name = "as_is_local_tests",
    tests = AS_IS_LOCAL_TESTS,
)

test_suite(
    name = "large_as_is_local_tests",
    tests = LARGE_AS_IS_LOCAL_TESTS,
)

test_suite(
    name = "all_as_is_local_tests",
    tests = [
        ":as_is_local_tests",
        ":large_as_is_local_tests",
    ],
)

test_suite(
    name = "hermetic_llvm_local_tests",
    tests = HERMETIC_LLVM_LOCAL_TESTS,
)

test_suite(
    name = "large_hermetic_llvm_local_tests",
    tests = LARGE_HERMETIC_LLVM_LOCAL_TESTS,
)

test_suite(
    name = "all_hermetic_llvm_local_tests",
    tests = [
        ":hermetic_llvm_local_tests",
        ":large_hermetic_llvm_local_tests",
    ],
)

test_suite(
    name = "as_is_rbe_tests",
    tests = AS_IS_RBE_TESTS,
)

test_suite(
    name = "large_as_is_rbe_tests",
    tests = LARGE_AS_IS_RBE_TESTS,
)

test_suite(
    name = "hermetic_llvm_rbe_tests",
    tests = HERMETIC_LLVM_RBE_TESTS,
)

test_suite(
    name = "large_hermetic_llvm_rbe_tests",
    tests = LARGE_HERMETIC_LLVM_RBE_TESTS,
)

test_suite(
    name = "all_hermetic_llvm_rbe_tests",
    tests = [
        ":hermetic_llvm_rbe_tests",
        ":large_hermetic_llvm_rbe_tests",
    ],
)

test_suite(
    name = "all_as_is_rbe_tests",
    tests = [
        ":as_is_rbe_tests",
        ":large_as_is_rbe_tests",
    ],
)
