load("@rules_python//python:defs.bzl", "py_binary", "py_test")

exports_files(["hermetic_llvm.MODULE.bazel", "hermetic_python.MODULE.bazel", "bazel_runner.py", "zip.py"])

py_binary(
    name = "bazel_runner",
    srcs = ["bazel_runner.py"],
    main = "bazel_runner.py",
)

py_test(
    name = "bazel_runner_test",
    srcs = [
        "bazel_runner.py",
        "bazel_runner_test.py",
    ],
    main = "bazel_runner_test.py",
    deps = ["@rules_python//python/runfiles"],
)

# OS+CPU config settings used by bazel_runner rules to pick the matching pinned inner
# Bazel binary.
[
    config_setting(
        name = name,
        constraint_values = constraints,
    )
    for name, constraints in {
        "linux_amd64": ["@platforms//os:linux", "@platforms//cpu:x86_64"],
        "linux_arm64": ["@platforms//os:linux", "@platforms//cpu:arm64"],
        "darwin_amd64": ["@platforms//os:osx", "@platforms//cpu:x86_64"],
        "darwin_arm64": ["@platforms//os:osx", "@platforms//cpu:arm64"],
    }.items()
]
