load("//builds:defs.bzl", "goal", "museum_project")
load("//builds:overlays.bzl", "BUILDBUDDY_RBE", "HERMETIC_LLVM")

# Abseil's C++ common libraries — the museum's first build.
# Source pinned in //tools/fetch:extension.bzl (@absl_archive, release
# 20260526.0). Built with the fully-hermetic LLVM toolchain (no host gcc).
#
#   bazel run //builds/abseil_cpp:build
#   bazel run //builds/abseil_cpp:test
#   bazel run //builds/abseil_cpp:build -- //absl/strings:strings   # subset
museum_project(
    name = "abseil_cpp",
    source_archive = "@absl_archive//file",
    strip_prefix = "abseil-cpp-20260526.0",
    overlays = [HERMETIC_LLVM],
    goals = [
        goal("build", targets = ["//absl/..."], build_flags = ["-c", "opt"]),
        goal("test", command = "test", targets = ["//absl/..."]),
        # Remote build execution on BuildBuddy (hermetic LLVM runs on the
        # executor). Override targets for quick iteration, e.g.:
        #   bazel run //builds/abseil_cpp:build.remote -- //absl/base:base
        goal("build.remote", overlays = [BUILDBUDDY_RBE], targets = ["//absl/..."]),
        # Same suite, executed on the remote executors. The cctz/time tests read
        # the system timezone database (/usr/share/zoneinfo), which the executor
        # image doesn't ship — it isn't a Bazel-tracked input — so they're
        # excluded here (the local `test` goal still runs them). A hermetic
        # tzdata input, or a tzdata-bearing executor image, would re-include them.
        goal(
            "test.remote",
            command = "test",
            overlays = [BUILDBUDDY_RBE],
            targets = [
                "//absl/...",
                "-//absl/time:time_test",
                "-//absl/time/internal/cctz:time_zone_format_test",
                "-//absl/time/internal/cctz:time_zone_lookup_test",
            ],
        ),
    ],
)
