load("//builds:defs.bzl", "goal", "museum_project")
load("//builds:overlays.bzl", "BUILDBUDDY_RBE")

# Copybara — Google's tool for transforming and moving code between repositories.
# A genuinely Bazel-native Java project. Build #2: exercises the JVM toolchain
# (rules_java + Bazel's hermetic remote JDK). Source pinned at tag v20260622.
# No toolchain overlay needed: the Java toolchain is hermetic out of the box.
#
#   bazel run //builds/copybara:build
#   bazel run //builds/copybara:test
#
# Note on host tooling: copybara's tests shell out to version-control binaries.
# The Mercurial (`hg`) tests are excluded because `hg` isn't a hermetic input
# (and isn't installed); the Git tests currently use the host `git`. Making git
# hermetic (a pinned-binary overlay, like we did for bazel/gh/llvm) is a natural
# follow-up. See docs/DESIGN.md.
museum_project(
    name = "copybara",
    source_archive = "@copybara_archive//file",
    strip_prefix = "copybara-20260622",
    goals = [
        goal("build", targets = ["//java/com/google/copybara:copybara"]),
        goal(
            "test",
            command = "test",
            targets = [
                "//javatests/...",
                "-//javatests/com/google/copybara/hg/...",  # needs Mercurial
            ],
        ),
        # Remote build execution (rules_java compiles run on the executor).
        goal(
            "build.remote",
            overlays = [BUILDBUDDY_RBE],
            targets = ["//java/com/google/copybara:copybara"],
        ),
        goal(
            "test.remote",
            command = "test",
            overlays = [BUILDBUDDY_RBE],
            targets = [
                "//javatests/...",
                "-//javatests/com/google/copybara/hg/...",  # needs Mercurial
                # The executor runs actions as root, so these tests don't observe
                # the permission-denied / file-locked failures they assert (they
                # pass in the local `test` goal under a normal uid).
                "-//javatests/com/google/copybara/archive:ArchiveModuleTest_all_tests",
                "-//javatests/com/google/copybara:folder/FolderDestinationTest_all_tests",
            ],
        ),
    ],
)
