load("//builds:defs.bzl", "build_spec", "museum_project", "test_spec")
load("//builds:environments.bzl", "LOCAL", "RBE")
load("//builds:overlays.bzl", "HERMETIC_LLVM", "PLATFORMS_DEP")

# doctest — the fast, header-only C++ unit-testing framework.
# Source pinned in //tools/fetch:extension.bzl (@doctest_archive, release
# v2.5.2), built with the fully-hermetic LLVM toolchain. Its BUILD files
# explicitly load the cc_* rules from @rules_cc, so it runs on the default Bazel
# 9.1.1 inner.
#
# doctest's only Bazel test lives in its examples/ tree, which is a *nested*
# standalone module (its own MODULE.bazel + WORKSPACE.bazel that pull doctest
# back in via local_path_override="..", like magic_enum's test/). So we build
# from examples/ as the root module (strip_prefix), and the parent doctest
# module is consumed as @doctest. examples/ already declares rules_cc and
# bazel_skylib; it lacks platforms, so PLATFORMS_DEP supplies @platforms for the
# injected RBE platform package.
#
#   bazel run //builds/doctest:build_local_linux_amd64
#   bazel run //builds/doctest:test_local_linux_amd64
museum_project(
    name = "doctest",
    source_archive = "@doctest_archive//file",
    strip_prefix = "doctest-2.5.2/examples",
    toolchains = [HERMETIC_LLVM, PLATFORMS_DEP],
    environments = [LOCAL, RBE],
    # Build the doctest library itself (consumed as @doctest from the examples
    # module), then run the example test that links static libs against it.
    build = build_spec(targets = ["@doctest//:doctest"], flags = ["-c", "opt"]),
    test = test_spec(
        targets = ["//exe_with_static_libs:exe_with_static_libs"],
        flags = ["-c", "opt"],
    ),
)
